# pico-w-neopixel-server

./: .gitignore  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
docs/: 5V_project.fzz  project.fzz  wiring.md
neopixel-server/: .gitignore  Cargo.toml
neopixel-server-utils/: Cargo.toml
neopixel-server-utils/src/: lib.rs
neopixel-server/src/: lib.rs  ws2812.rs
src/: frame.rs  lib.rs  main.rs  panic.rs  secret.rs.example  ws2812.rs
