[package]
edition = "2021"
name = "pico-w-neopixel-server"
version = "0.2.0"
license = "MIT OR Apache-2.0"
default-run = "tcp"


[dependencies]
rp-binary-info = { git = "https://github.com/rp-rs/rp-binary-info", version = "0.1.0" }
# TODO (#1): Work on this to avoid putting the pico into boot mode manually
# usbd-picotool-reset = "0.2.0"

embassy-embedded-hal = { version = "0.2.0", features = ["defmt"] }
embassy-sync = { version = "0.6.1", features = ["defmt"] }
embassy-executor = { version = "0.6.3", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.2.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-usb = { version = "0.3.0", features = ["defmt"] , default-features = false}
embassy-net = { version = "0.5.0", features = ["defmt", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-futures = { version = "0.1.1"}
embassy-usb-logger = { version = "0.2.0"}
cyw43 = { version = "0.2.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = {version = "0.2.0", features = ["defmt", "overclock"] }

defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
heapless = "0.8.0"

embedded-hal-1 = { package = "embedded-hal", version = "1.0.0" }
embedded-hal-async = "1.0.0"
embedded-hal-bus = { version = "0.2.0", features = ["async"] }
embedded-io-async = { version = "0.6.0", features = ["defmt-03"] }
static_cell = { version = "2", features = []}
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
itertools = { version = "0.11.0", default-features = false }
ringbuf = { version = "0.3.3", default-features = false }

[features]
grb = []

[profile.release]
# debug = 2